# challenges

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: find_fragment_sum.py  find_unique_number.py  list_fragment.py  sort_by_frequency.py  text_compression.py
